--- a/xoxo.html
+++ b/xoxo.html
@@ -19,7 +19,7 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae ultrices nisl. Nam lacinia consectetur diam,
         vel mollis turpis.Curabitur scelerisque ac ante eget fermentum. Morbi in sodales dolor. Nullam ullamcorper magna
-        nec dui sollicitudin, at auctor libero pellentesque.</p><br>
+        nec dui sollicitudin, at auctor libero pellentesquae.</p><br>
 </body>
 
 </html>
