--- a/xoxo.html
+++ b/xoxo.html
@@ -8,10 +8,12 @@
 
 <body>
     <h1>Olá, Mundo!</h1>
-    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae ultrices nisl. Nam lacinia consectetur diam,
+    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        Sed vitae ultrices nisl. Nam lacinia consectetur diam,
         vel mollis turpis.</h3><br>
 
-    <p>Curabitur scelerisque ac ante eget fermentum. Morbi in sodales dolor. Nullam ullamcorper magna nec dui
+    <p>Curabitur scelerisque ac ante eget fermentum. 
+        Morbi in sodales dolor. Nullam ullamcorper magna nec dui
         sollicitudin, at auctor libero pellentesque.</p><br>
 
     <p>Ut faucibus, dui et pharetra auctor, leo lorem molestie dolor, nec venenatis ante orci nec nunc. Vestibulum ante
