--- a/xoxo.html
+++ b/xoxo.html
@@ -17,7 +17,7 @@
         sollicitudin, at auctor libero pellentesque.</p><br>
         <H1>MODIFICADO</H1>
         
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae ultrices nisl. Nam lacinia consectetur diam,
+    <p>Lorem ipsum dolor sit amet, adipiscing elit. Sed vitae ultrices nisl. Nam lacinia consectetur diam,
         vel mollis turpis.Curabitur scelerisque ac ante eget fermentum. Morbi in sodales dolor. Nullam ullamcorper magna
         nec dui sollicitudin, at auctor libero pellentesquae.</p><br>
 
